--- a/package.json
+++ b/package.json
@@ -51,10 +51,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
+    "mark.js": "^8.11.1",
     "mochawesome": "^7.1.3",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlighter": "^0.4.3",
+    "react-mark.js": "^9.0.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
