--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlighter": "^0.4.3",
+    "react-hook-form": "^7.43.2",
     "react-mark.js": "^9.0.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
