--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "swiper": "^9.0.2",
+    "use-mask-input": "^3.0.6",
     "web-vitals": "^3.0.3"
   },
   "browserslist": {
